[gd_scene load_steps=9 format=3 uid="uid://ctd8ortrxwjdx"]

[ext_resource type="Script" path="res://Menus/MenuScripts/pause_menu.gd" id="1_o32pf"]
[ext_resource type="Texture2D" uid="uid://dtcwajdpfcbhl" path="res://Menus/MenuBackgrounds/PauseMenu.PNG" id="2_3feog"]
[ext_resource type="FontFile" uid="uid://bahs2isam48vq" path="res://fonts/CormorantGaramond-VariableFont_wght.ttf" id="3_3rdy4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ayxpd"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gkchj"]
bg_color = Color(0.203922, 0.227451, 0.192157, 0.784314)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujodt"]
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3ma0"]
bg_color = Color(0.203922, 0.227451, 0.192157, 0.784314)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_alnja"]
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o32pf")

[node name="PauseBackground" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseMenuBackground" type="TextureRect" parent="PauseBackground"]
layout_mode = 0
offset_left = 377.0
offset_right = 868.0
offset_bottom = 638.0
texture = ExtResource("2_3feog")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3rdy4")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_ayxpd")
theme_override_styles/normal = SubResource("StyleBoxFlat_gkchj")
text = "~Resume Game~"

[node name="Quit to Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3rdy4")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_ujodt")
theme_override_styles/normal = SubResource("StyleBoxFlat_j3ma0")
text = "~Quit to Main Menu~"

[node name="Quit to Desktop" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_3rdy4")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_alnja")
theme_override_styles/normal = SubResource("StyleBoxFlat_j3ma0")
text = "~Quit to Desktop~"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit to Main Menu" to="." method="_on_quit_to_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit to Desktop" to="." method="_on_quit_to_desktop_pressed"]
